fix: profile image default picture and edit icon

--- a/src/app/pages/patients/add/add.component.scss
+++ b/src/app/pages/patients/add/add.component.scss
@@ -38,3 +38,13 @@ nb-tabset ::ng-deep > ul >li >a:focus  {
 .cursor-pointer{
     cursor: pointer;
 }
+.edit-icon{
+    height: 40px;
+    width: 40px;
+}
+.bg-postion{
+    background-position: center;
+}
+nb-user ::ng-deep > div >div  {
+    background-position: center;
+}
