--- a/src/app/pages/patients/add/add.component.html
+++ b/src/app/pages/patients/add/add.component.html
@@ -13,16 +13,16 @@
                 <nb-tab tabTitle="{{'kGeneral' | translate}}">
                         <div class="row pb-3">
                                 <div class="col-auto position-relative m-auto ">
-                                    <nb-user class="cursor-pointer user-profile" [picture]="profileData?.imageURL"
+                                    <nb-user class="cursor-pointer user-profile bg-postion" [picture]="imageURL"  [name]="profileData?.name"
                                         [ngClass]="{'none': profileData?.monitored == 0,'success': profileData?.alarm == 0 && profileData?.monitored == 1, 'warning': profileData?.alarm == 1 && profileData?.monitored == 1, 'danger': profileData?.alarm == 2 && profileData?.monitored == 1}">
                                     </nb-user>
                                     <label for="file-input">
-                                        <nb-icon class="position-absolute top-0 end-0  cursor-pointer h-25 w-25 rounded-circle p-1 mt-1 border border-2"
+                                        <nb-icon class="position-absolute top-0 end-0  cursor-pointer edit-icon rounded-circle p-1 mt-1 border border-2"
                                         [ngClass]="{'bg-darks': fontColor, 'bg-light': !fontColor}" nbTooltip="Edit" icon="edit-outline"
                                         shape="rectangle" ></nb-icon>
                                     </label>
                                 
-                                    <input id="file-input" (change)="changeProfile($event)" class="d-none" type="file" nbInput fullWidth fieldSize="small" placeholder="Input">
+                                    <input id="file-input" (change)="readURL($event)" class="d-none" type="file" nbInput fullWidth fieldSize="small" placeholder="Input">
                                 </div>
                         </div>
                     <div class="row">
