--- a/src/app/pages/patients/visits/visits.component.html
+++ b/src/app/pages/patients/visits/visits.component.html
@@ -1,4 +1,4 @@
-    <nb-card class="h-100" [nbSpinner]="isLoading">
+    <nb-card size="large" class="h-100" style="overflow: auto" [nbSpinner]="isLoading">
         <div class="row ">
             <div class="col-md-6 offset-md-3">
                 <nb-card-header>
