feat: Added schedule list

--- a/src/app/pages/patients/vitals/vitals.component.html
+++ b/src/app/pages/patients/vitals/vitals.component.html
@@ -1,4 +1,4 @@
-<nb-card size="large" style="overflow: auto" class="mb-0" [nbSpinner]="isLoading">
+<nb-card size="large" style="overflow: auto" class="mb-0 h-100" [nbSpinner]="isLoading">
     <nb-card-header>
         <div class="d-flex w-100">
             <span class="ps-2 subtitle d-flex align-items-center">
