fix: Added erroe message

--- a/src/app/pages/patients/visits/visits.component.html
+++ b/src/app/pages/patients/visits/visits.component.html
@@ -46,7 +46,7 @@
       </nb-list-item>
     </nb-list>
     <div class="h6 text-center p-4" *ngIf="appointmentlistResult?.length == 0">
-      No scheddules available. Tap + to add schedule.
+      No schedules found. Tap + to add schedule.
     </div>
   </nb-card-body>
   </div> 
