--- a/src/app/pages/patients/profile/profile.component.html
+++ b/src/app/pages/patients/profile/profile.component.html
@@ -94,13 +94,17 @@
         <div class="row">
             <div class="col-md-2">
                 <div class="row">
-                    <div class="col-12 mb-2">
-                    <div class="text-center p-2 fw-bold m-auto" *ngIf=" message >= 0">{{minutes}} : {{message }}</div>
+                    <div class="col-6">
+                    <!-- <div class="text-center p-2 fw-bold m-auto" *ngIf=" message >= 0">{{minutes}} : {{message }}</div> -->
+                    <span *ngIf=" message >= 0">{{minutes}} : {{message }}</span>
+                    <button class="float-end timerButton" outline status="primary" nbButton size="tiny" (click)="start()" *ngIf="startStop">Start</button>
+                    <button class="float-end timerButton" outline status="primary" nbButton size="tiny"(click)="stop(message)" *ngIf="!startStop && message >= 0">Stop</button>
+
                     </div>
-                    <div class="col-12 ">
-                            <button class="float-end timerButton" outline status="primary" nbButton size="tiny" (click)="start()" *ngIf="startStop">start</button>
-                            <button class="float-end timerButton" outline status="primary" nbButton size="tiny"(click)="stop(message)" *ngIf="!startStop && message >= 0">stop</button>
-                    </div>
+                    <!-- <div class="col-6">
+                            <button class="float-end timerButton" outline status="primary" nbButton size="tiny" (click)="start()" *ngIf="startStop">Start</button>
+                            <button class="float-end timerButton" outline status="primary" nbButton size="tiny"(click)="stop(message)" *ngIf="!startStop && message >= 0">Stop</button>
+                    </div> -->
                 </div>
             </div>
             <div class="offset-md-2 col-md-10">
