fix: lint issue

--- a/src/app/pages/patients/list/list.component.html
+++ b/src/app/pages/patients/list/list.component.html
@@ -4,8 +4,8 @@
             <div class="row m-auto">
                 <div class="col-auto mx-auto mb-3">
                     <nb-button-group status="primary" size="tiny">
-                        <button nbButtonToggle nbButton pressed (click)= "loadNext(undefined, 0)" class="w-100">{{'kAll' | translate}}</button>
-                        <button nbButtonToggle nbButton (click)="loadNext(undefined,1)" class="w-100">{{'kMonitored' | translate}}</button>
+                        <button nbButtonToggle nbButton pressed (click)= "loadNext(undefined, 0)" >{{'kAll' | translate}}</button>
+                        <button nbButtonToggle nbButton (click)="loadNext(undefined,1)">{{'kMonitored' | translate}}</button>
                     </nb-button-group>
                 </div>
                 <div class="col-auto mt-1 mx-auto mb-3 position-relative">
