--- a/src/app/shared/components/devices/devices.component.html
+++ b/src/app/shared/components/devices/devices.component.html
@@ -78,7 +78,7 @@
         <tr>
             <th scope="col" class="subtitle">Manufacturer</th>
             <th scope="col" class="subtitle">Device Type</th>
-            <th scope="col" class="subtitle">Device Model</th>
+            <th scope="col" class="subtitle">Device Name</th>
             <th scope="col" class="subtitle">Serial Number</th>
             <th class="text-center subtitle" scope="col">Actions</th>
         </tr>
