fix: Commented timer

--- a/src/app/pages/patients/profile/profile.component.html
+++ b/src/app/pages/patients/profile/profile.component.html
@@ -93,7 +93,7 @@
         </div>
         <div class="row">
             <div class="col-md-2 px-4">
-                <div class="d-flex justify-content-between">
+                <!-- <div class="d-flex justify-content-between">
                     <span *ngIf=" message >= 0">{{minutes}} : {{message }}</span>
                     <div>
                         <button class="float-end timerButton" outline status="success" nbButton size="tiny" (click)="start()" *ngIf="startStop">Start</button>
@@ -101,7 +101,7 @@
     
                     </div>
 
-                </div>
+                </div> -->
                 <!-- <div class="row">
                     <div class="col-6">
                     <div class="text-center p-2 fw-bold m-auto" *ngIf=" message >= 0">{{minutes}} : {{message }}</div>
