--- a/src/app/pages/patients/alerts/alerts.component.html
+++ b/src/app/pages/patients/alerts/alerts.component.html
@@ -16,7 +16,7 @@
                 <tr *ngFor="let item of alerts;let i=index">
                     <td class="align-middle">{{item.alertTime | date : 'dd/MM/yy, h:mm a' || '-'}}</td>
                     <td class="align-middle ">{{getType(item.alertType)}}</td>
-                    <td class="align-middle text-center">{{getStatus(item.alertStatus)}}</td>
+                    <td class="align-middle text-center" [ngClass]="{'text-success': item.alertStatus == 3 , 'text-danger': item.alertStatus == 1, 'text-warning': item.alertStatus == 2 }">{{getStatus(item.alertStatus)}}</td>
                     <td class="align-middle">{{item.alertResolved | date : 'dd/MM/yy, h:mm a' || '-'}}</td>
                     <td class="align-middle">
                         <a (click)="viewData(item)" class="cursor-pointer">View Notes</a>
