fix: design alignment

--- a/src/app/pages/patients/schedule/schedule.component.html
+++ b/src/app/pages/patients/schedule/schedule.component.html
@@ -9,7 +9,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-12">
+                    <div class="col-12 py-4">
                         <input type="search" nbInput fullWidth status="basic" name="searchText" id="searchText"
                             [(ngModel)]="searchText" (keyup)="filterProtocolList(searchText)"
                             placeholder="{{'kSearchForAssessment' | translate}}">
