fix: navigation issue

--- a/src/app/pages/patients/list/list.component.html
+++ b/src/app/pages/patients/list/list.component.html
@@ -14,7 +14,7 @@
                         <nb-action class="ps-0 pe-0" nbTooltip="Filter" nbTooltipPlacement="top" icon="funnel-outline" (click)="filterPatient()">
                         </nb-action>
                         <nb-action nbTooltip="Add Patient" nbTooltipPlacement="top" class="pe-0" icon="plus-circle-outline" (click)="addPatient()"></nb-action>
-                        <nb-action nbTooltip="Show Grid" nbTooltipPlacement="top" class="pe-0" icon="grid-outline"></nb-action>
+                        <nb-action nbTooltip="Show Grid" nbTooltipPlacement="top" class="pe-0" icon="grid-outline" (click)="getCompactView()"></nb-action>
                     </nb-actions>
                 </div>
             </div>
