--- a/src/app/pages/dashboard/patients/patients.component.html
+++ b/src/app/pages/dashboard/patients/patients.component.html
@@ -5,6 +5,6 @@
 
     </div>
     <div class="col-md-12">
-        <ng2-smart-table [settings]="settings" [source]="data" ></ng2-smart-table>
+        <ng2-smart-table [settings]="settings" [source]="data" (userRowSelect)="getRow($event)"></ng2-smart-table>
     </div>
 </div>
