--- a/src/app/pages/patients/assessment/assessment.component.html
+++ b/src/app/pages/patients/assessment/assessment.component.html
@@ -1,3 +1,3 @@
 <div class="container-fluid demo-iframe-holder height p-0" id="container">
-    <link rel="stylesheet" [href]="styleUrl" *ngIf="styleUrl" type="text/css">
+    <!-- <link rel="stylesheet" [href]="styleUrl" *ngIf="styleUrl" type="text/css"> -->
 </div>
