--- a/src/app/pages/patients/schedule/schedule.component.html
+++ b/src/app/pages/patients/schedule/schedule.component.html
@@ -4,8 +4,7 @@
             <div class="col-md-6 offset-md-3">
                 <div class="row p-3">
                     <div class="align-self-center col-12 pt-1 text-center">
-                        <h6 *ngIf="clinicData?.oemID !== 155">{{'kPleaseSelectCondition' | translate }}</h6>
-                        <h6 *ngIf="clinicData?.oemID === 155">Please select a Consultation Type</h6>
+                        <h6>Please select a Consultation Type</h6>
                     </div>
                 </div>
                 <div class="row">
